--- a/aula012/ex015/modelo.html
+++ b/aula012/ex015/modelo.html
@@ -16,7 +16,7 @@
                 <input type="number" name="txtano" id="txtano" min="0">
             </p>
             <p>Sexo:
-                <input type="radio" name="radsex" id="mas">
+                <input type="radio" name="radsex" id="mas" checked>
                 <label for="mas">Masculino</label>
                 <input type="radio" name="radsex" id="fem">
                 <label for="fem">Feminino</label>
