--- a/aula014/ex017/modelo.html
+++ b/aula014/ex017/modelo.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hora do Dia</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="carregar()">
+<body>
     <header>
-        <h1>Hora do Dia</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
-        <div id="msg">
-            Aqui vai aparecer uma mensagem
+        <div>
+            <p>Número: <input type="number" name="num" id="txtn">
+            <input type="button" value="Gerar Tabuada" onclick="gerar()">
+            </p>
         </div>
-        <div id="foto">
-            <img id="imagem" src="img/manha01.png" alt="Foto do Dia">
+        <div>
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um número acima:</option>
+            </select>
         </div>
     </section>
     <footer>
