--- a/aula014/test/001.html
+++ b/aula014/test/001.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vamos contar</title>
+    <title>Contador</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,18 +11,14 @@
         <h1>Vamos contar</h1>
     </header>
     <section>
-        <div id="dados">
-            <p> Início: <input type="number" name="inicio" id="txti">
-            </p>
-            <p> Fim: <input type="number" name="fim" id="txtf">
-            </p>
-            <p> Passo: <input type="number" name="passo" id="txtp">
-            </p>
-
+        <div>
+            <p>Início: <input type="number" name="txtnum" id="inicio"></p>
+            <p>Fim: <input type="number" name="txtnum" id="fim"></p>
+            <p>Passo: <input type="number" name="txtnum" id="passo"></p>
             <input type="button" value="Contar" onclick="contar()">
         </div>
         <div id="res">
-            Preparando a contagem...
+
         </div>
     </section>
     <footer>
