--- a/javascript-suprasupledev/ex007/07b.html
+++ b/javascript-suprasupledev/ex007/07b.html
@@ -7,27 +7,31 @@
 </head>
 <body>
     <script>
-
         function convertToFahrenheit(celsius) {
             return (celsius * 9 / 5) + 32;
         }
 
-        console.log(convertToFahrenheit(25));
+        //console.log(convertToFahrenheit(25));
 
         function convertToCelsius(fahrenheit) {
             return (fahrenheit - 32) * 5 / 9;
         }
 
-        console.log(convertToCelsius(86))
+        //console.log(convertToCelsius(86))
         
         function convertTemperature(degrees, unit) {
 
-            return convertTemperature(celsius + 'C');
-
-
-
+            if (unit === 'C') {
+                const result = convertToFahrenheit(degrees);
+                return `${result}F`;
+            } else if (unit === 'F') {
+                const result = convertToCelsius(degrees);
+                return `${result}C`;
+            }
         }
 
+        console.log(convertTemperature(25, 'C'));
+        console.log(convertTemperature(86, 'F'));
     </script>
 </body>
 </html>
