--- a/javascript-suprasupledev/ex008/08-rock-paper-scissors.html
+++ b/javascript-suprasupledev/ex008/08-rock-paper-scissors.html
@@ -23,14 +23,25 @@
         score.wins = 0;
         score.losses = 0;
         score.ties = 0;
+        localStorage.removeItem('score');
     ">Reset Score</button>
 
     <script>
-        const score = {
-            wins: 0,
-            losses: 0,
-            ties: 0
+        let score = JSON.parse(localStorage.getItem('score')) || {
+                wins: 0,
+                losses: 0,
+                ties: 0
+            };
+
+        /*
+        if (!score) {
+            score = {
+                wins: 0,
+                losses: 0,
+                ties: 0
+            };
         }
+        */
 
         function playGame(playerMove) {
             
@@ -74,6 +85,8 @@
             } else if (result === 'Tie.') {
                 score.ties += 1;
             }
+
+            localStorage.setItem('score', JSON.stringify(score));
 
             alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result} \nWins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`);
         }
