--- a/javascript-suprasupledev/ex008/test.html
+++ b/javascript-suprasupledev/ex008/test.html
@@ -23,14 +23,25 @@
         score.wins = 0;
         score.losses = 0;
         score.ties = 0;
+        localStorage.removeItem('score');
     ">Reset Score</button>
 
     <script>
-        const score = {
-            wins: 0,
-            losses: 0,
-            ties: 0
+        let score = JSON.parse(localStorage.getItem('score')) || {
+                wins: 0,
+                losses: 0,
+                ties: 0
+            };
+
+        /*
+        if (!score) {
+            score = {
+                wins: 0,
+                losses: 0,
+                ties: 0
+            };
         }
+        */
 
         function playGame(playerMove) {
             
@@ -75,6 +86,8 @@
                 score.ties += 1;
             }
 
+            localStorage.setItem('score', JSON.stringify(score));
+
             alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result} \nWins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`);
         }
 
@@ -95,30 +108,6 @@
             //retorna valor gerado (dentro do bloco) para a variável computerMove, que está no fim da função.
             return computerMove;
         }
-
-        const product2 = {
-            name: 'shirt',
-            'delivery-time': '1 day',
-            rating: {
-                stars: 4.5,
-                count: 87
-            },
-            fun: function function1() {
-                console.log('function inside object');
-            }
-        };
-        console.log(product2);
-        console.log(product2.name);
-        console.log(product2['name']);
-        console.log(product2['delivery-time']);
-
-        console.log(product2.rating.count);
-
-        console.log(JSON.stringify(product2));
-        
-        const jsonString = JSON.stringify(product2);
-        console.log(JSON.parse(jsonString));
-
         </script>
 </body>
 </html>
