--- a/javascript-suprasupledev/ex008/test.html
+++ b/javascript-suprasupledev/ex008/test.html
@@ -108,6 +108,10 @@
             //retorna valor gerado (dentro do bloco) para a variável computerMove, que está no fim da função.
             return computerMove;
         }
+
+        const namei = 'LUCAS'
+
+        console.log(namei.repeat(3));
         </script>
 </body>
 </html>
